[gd_scene load_steps=5 format=3 uid="uid://d0qwsc6yetr5v"]

[ext_resource type="PackedScene" uid="uid://bewfov27gg4an" path="res://splash_screen.tscn" id="1_7eigp"]
[ext_resource type="Script" path="res://root.gd" id="1_nlshw"]
[ext_resource type="PackedScene" uid="uid://cedj2op5earym" path="res://main.tscn" id="2_wcs20"]
[ext_resource type="PackedScene" uid="uid://cex6it4a4qnxf" path="res://game_over.tscn" id="4_5da6n"]

[node name="Root" type="Node"]
script = ExtResource("1_nlshw")

[node name="SplashScreen" parent="." instance=ExtResource("1_7eigp")]

[node name="Main" parent="." instance=ExtResource("2_wcs20")]

[node name="GameOver" parent="." instance=ExtResource("4_5da6n")]

[connection signal="start_game" from="SplashScreen" to="." method="start_game"]
[connection signal="close_main" from="Main" to="." method="_on_main_close_main"]
[connection signal="quit_game" from="GameOver" to="." method="_on_game_over_quit_game"]
